@@ -1,4 +1,6 @@
 Verion 0.9.44dev (?? ??? 2004)
+  - Fixed export URL so users should now be prompted to save with
+    correct filename.
   - Added delete link on list of unapproved events, making it easier to
     delete bogus events.
   - For external users, use email address as fullname if only an email address
